Cleanup UTF-8 charset usage
Closes #44000

Signed-off-by: Alexander Schwartz <alexander.schwartz@ibm.com>